removed incompatible routes
