# api/v1/impl/server.go
@@ -32,30 +32,12 @@ func (l *LoggingServerImpl) SetLoggingConfig(c *gin.Context, cfg gen.LoggingConf
 	})
 }
 
-func (l *LoggingServerImpl) GetLoggingLevel(c *gin.Context) {
-	// Implement the logic to get the current log level
-	// For example, you might want to read from a config file or environment variable
-	level := log.GetLevel()
-	c.JSON(200, gin.H{
-		"level": level,
-	})
-}
-
 func (l *LoggingServerImpl) UpdateLoggingLevel(c *gin.Context, level gen.LevelEnum) {
 	// Implement the logic to set the log level
 	// For example, you might want to write to a config file or environment variable
 	log.SetLogLevel(level)
 
 	c.JSON(200, level)
-}
-
-func (l *LoggingServerImpl) GetLoggingFormat(c *gin.Context) {
-	// Implement the logic to get the current log format
-	// For example, you might want to read from a config file or environment variable
-	format := log.GetFormat()
-	c.JSON(200, gin.H{
-		"format": format,
-	})
 }
 
 func (l *LoggingServerImpl) UpdateLoggingFormat(c *gin.Context, f gen.FormatEnum) {
